--- a/config.toml
+++ b/config.toml
@@ -557,6 +557,23 @@
   leetcodeId = "none"
   leetcodeRating = 0
 
+  [[Params.uchilePeople]]
+  name = ""
+  nickname = "deragonie"
+  icpc = true
+  ioi = false
+  codevita = true
+  meta_hackercup = true
+  rayan = true
+  active = true
+  codeforcesId = "deragonie"
+  codeforcesRating = 0
+  csesId = "none"
+  atcoderId = "none"
+  atcoderRating = 0
+  leetcodeId = "none"
+  leetcodeRating = 0
+
   # Teams ICPC
   [[Params.team]]
   name = "globos.get()"
