--- a/config.toml
+++ b/config.toml
@@ -757,8 +757,8 @@
   codeforcesId = "storrealbac"
   codeforcesRating = 1418
   csesId = "none"
-  atcoderId = "none"
-  atcoderRating = 0
+  atcoderId = "storrealbac"
+  atcoderRating = 76
   leetcodeId = "none"
   leetcodeRating = 0
 
